@@ -67,7 +67,7 @@ requires in addition the \apron library and its dependencies
 Bddapron is released under the LGPL license.
 
 \section{Download}
-Current version: 2.1.0
+Current version: 2.2.0
 \begin{itemize}
 \item \xlink{Subversion repository: BDDAPRON alone}{http://gforge.inria.fr/plugins/scmsvn/viewcvs.php/pkg/bddapron/?root=bjeannet} (see \xlink{Up}{../index.html} for the organisation of the repository)
 \item \xlink{Subversion repository: BDDAPRON together with dependencies camllib, mlcuddidl, mlgmpidl, apron}{http://gforge.inria.fr/plugins/scmsvn/viewcvs.php/dist/bddapron-dist/?root=bjeannet} (see \xlink{Up}{../index.html} for the organisation of the repository)
